--- a/posts/2020-04-01.md
+++ b/posts/2020-04-01.md
@@ -1,6 +1,6 @@
 # Robust Reductions in Materialize
 
-**DRAFT**
+This post is reblogged from [the Materialize.io blog](https://materialize.io/robust-reductions-in-materialize/).
 
 Materialize is an incremental view maintenance engine, one which takes your SQL queries expressed as views and continually maintains them as your data change. Surely there are a lot of ways one could do this, ranging from the very naïve (just recompute from scratch) to the more sophisticated end of the spectrum (what we do).
 
@@ -85,24 +85,23 @@ From a collection `tripdata`, and some key expressions specified in the `GROUP B
 
 With records grouped by key, we can apply each of the aggregation functions to its group. For each `passenger_count` we can scan through the collected records and determine the right output. In our case, the minimum and maximum `fare_amount` values can be determined in one scan.
 
-This has a pretty easy differential dataflow implementation:
+This has a pretty easy implementation in [differential dataflow](https://github.com/TimelyDataflow/differential-dataflow):
 
 ```rust
 tripdata
+    // Extract a key from each record.
     .map(|record| (key_fn(record), record))
+    // Group by key, and reduce records.
     .reduce(|key, input, output| {
-        let mut result = Vec::new();
-        // Load up the key as the first columns.
-        for col in key.iter() {
-            result.push(col.0.clone());
-        }
+        // Form a record of the aggregates.
+        let mut record = Vec::new();
         // Insert aggregates in order.
         for agg_fn in agg_fns {
-            result.push(agg_fn(input));
+            record.push(agg_fn(input));
         }
-        output.push((result, 1));
+        // Produce the single record as output.
+        output.push((record, 1));
     })
-    .map(|(_key, record)| record)
 ```
 
 ### Downsides
@@ -128,25 +127,22 @@ To do this, we'll need to break apart what was called `agg_fn` up above into two
 This approach gives us a slightly modified version of the differential dataflow code up above, where we *first* transform the data to extract the relevant values, and *then* perform the reduction:
 ```rust
 tripdata
-    // Extract relevant values
+    // Extract relevant values from each record.
     .map(|record| (
         key_fn(record),
         agg_vals.iter(|val| val(record)).collect(),
     )
-    // Reduce relevant values
+    // Group by key, and reduce values.
     .reduce(|_key, input, output| {
-        let mut result = Vec::new();
-        // Load up the key as the first columns.
-        for col in key.iter() {
-            result.push(col.0.clone());
-        }
+        // Form a record of the aggregates.
+        let mut record = Vec::new();
         // Insert aggregates in order.
         for agg_fn in agg_fns {
-            result.push(agg_fn(input));
+            record.push(agg_fn(input));
         }
-        output.push((result, 1));
+        // Produce the single record as output.
+        output.push((record, 1));
     })
-    .map(|(_key, record)| record)
 ```
 
 This can result in a substantial *pre-reduction* in the amount of data differential dataflow needs to maintain, without much of a complexity burden. In the example of our taxi data there are only 3,105 distinct `(passenger_count, fare_amount)` pairs, which means across all keys we'll only have those many records to keep track of. That's a substantial reduction from the 102 million input records.
@@ -230,12 +226,16 @@ Any SQL reduction can have a `DISTINCT` modifier, with the intended semantics th
 
 ```rust
 tripdata
-    // Extract relevant values
+    // Extract relevant values from each record.
     .map(|record| (
         (key_fn(record), agg_val(record))
     )
-    // Optional distinct
+    // Optional, if DISTINCT is specified
     .distinct()
+    // Group by key, and reduce values.
+    .reduce(|_key, input, output| {
+        // ...
+    })
 ```
 
 
@@ -270,7 +270,7 @@ The crucial observation here is that when an input change occurs, we only need t
 
 ### Bonus: In-place aggregations
 
-A fair number of SQL aggregations end up summing things. Even when they say `COUNT` or `AVG` or `STDDEV`, these are each really just flavers of `SUM`. Even `ANY` or `ALL` (which underlie `EXISTS` and `NOT EXISTS`) can be written as `SUM`. Fortunately, differential dataflow knows how to efficiently maintain the sum of things in-place, without maintaining the distinct values that lead to the sum. This results in a very lean memory profile of just a few counts for each key.
+A fair number of SQL aggregations end up summing things. Even when they say `COUNT` or `AVG` or `STDDEV`, these are each really just flavors of `SUM`. Even `ANY` or `ALL` (which underlie `EXISTS` and `NOT EXISTS`) can be written as `SUM`. Fortunately, differential dataflow knows how to efficiently maintain the sum of things in-place, without maintaining the distinct values that lead to the sum. This results in a very lean memory profile of just a few counts for each key.
 
 Why "just a few counts" rather than "one count", you ask?
 
@@ -279,12 +279,12 @@ It turns out that SQL has some delightful quirks surrounding `NULL`, and we need
 2. No non-NULL values for this key (NULL output)
 3. Legit values forming meaningful aggregate (legit output)
 
-To do this, we implement each `SUM` by tracking three aggregate quantities for each key:
+To deal with this, we implement each `SUM` by tracking three aggregate quantities for each key:
 1. The number of values,
 2. The number of non-NULL values,
 3. The aggregate value itself.
 
-Not all of the aggregates need this complexity (`COUNT(*)` just needs the first number) but we use three just to keep the dataflow logic simple enough. In the future, we should reasonably fuse all of these aggregations together, as without distinct values there is no harm in doing so, and many share the same aggregate quantities.
+Not all of the aggregates need this complexity (`COUNT(*)` just needs the first number) but we use three just to keep the dataflow logic simple enough. The in-place aggregations don't result in multiplicative increases in distinct elements, and in the future we should fuse all of these aggregations together, and just extend the list of aggregates from three to "as many as are needed".
 
 ## Concluding thoughts
 
