--- a/posts/2020-08-01.md
+++ b/posts/2020-08-01.md
@@ -37,7 +37,7 @@ Let's take an example:
 We see a sequence of changes, ordered by the three times `time0`, `time1`, and `time2`. At `time0` we see three records are introduced. We don't know if these are the "initial data", but we don't need to; we are just transcribing the changes that occur. At `time1` we see both a deletion and an addition of a record. We can interpret this (perhaps incorrectly) as an update to `record1` that changes it to `record4`; again we aren't worried about the reason for the change, just what the change was. Finally, at `time2` we see the deletion of two records.
 
 
-![Data change as time davences](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure1.png)
+![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure1.png)
 
 This is the sort of information we want to record. An evolving history of what happens to our data, as time advances.
 
@@ -80,6 +80,9 @@ At the same time, immunizing ourselves to duplication and reordering provides us
 
 * If our representation can tolerate arbitrary duplication, then we can use multiple computers to reduntantly compute and write out the results. This provides so-called *active-active* fault-tolerance, which duplicates work but insures against the failure (or planned outage) of individual workers.
 
+    ![Active-active replication](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/active.png)
+
+
 There are several other advantages to these degrees of robustness, from resharding streams of data to easing the reintroduction of new or recovered replicas. Migrating between query plans without interruption. Stuff like that.
 
 ## Materialize CDCv2
@@ -96,7 +99,7 @@ We will make two types of statements, both of which will be statements true abou
 
 In picture form, it might look something like this:
 
-![Data change as time davences](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure2.png)
+![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure2.png)
 
 Clearly I've had to make up some new times to fit around `time0` and `time1`, but I hope you'll excuse that!
 
@@ -140,7 +143,7 @@ The `lower` and `upper` bounds are each vectors of time, which might seem odd at
 
 Here is a picture that hints at what is different with the progress statements:
 
-![Data change as time davences](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure3.png)
+![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure3.png)
 
 Notice that rather than a record for each time, we have intervals of times in which we record only those counts with non-zero times.
 
@@ -148,7 +151,7 @@ One detail we should shake out now is that we've introduce some non-determinism 
 
 For example, the following figure presents two ways we could have batched progress information.
 
-![Data change as time davences](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure4.png)
+![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure4.png)
 
 Even though there is not duplication between the two sets of progress statements, we'll end up recovering the puzzle just fine if someone interleaved the statements from the right and left side.
 
